--- a/assets/sass/now-ui-kit/_variables.scss
+++ b/assets/sass/now-ui-kit/_variables.scss
@@ -42,11 +42,11 @@ $opacity-2:                  rgba(255,255,255, .2) !default;
 $transparent-bg:             transparent !default;
 $dark-background:            #555555 !default;
 
-$default-color:              #37474F !default;
+$default-color:              #21232a !default;
 $default-states-color:       lighten($default-color, 6%) !default;
 $default-color-opacity:      rgba(182, 182, 182, .6) !default;
 
-$primary-color:              #37474F !default;
+$primary-color:              #21232a !default;
 $primary-states-color:       lighten($primary-color, 6%) !default;
 $primary-color-opacity:      rgba(249, 99, 50, .3) !default;
 $primary-color-alert:        rgba(249, 99, 50, .8) !default;
